# data-quality-lens

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: customers.csv
src/data_quality_lens/: __init__.py  __main__.py  analyzer.py  cli.py  models.py  reporting.py
tests/: test_analyzer.py  test_reporting.py
